--- a/b_boot_jpa/src/main/resources/application.properties
+++ b/b_boot_jpa/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port = 9090
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.password=1234
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=boot
