--- a/c_boot_thymeleaf/src/main/resources/application.properties
+++ b/c_boot_thymeleaf/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=9090
+#ju-seock
 
-#encoding filter
+#set encoding filter
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
@@ -9,5 +10,5 @@ server.servlet.encoding.enabled=true
 logging.level.root=info
 
 #devtools
-spring.devtools.livereload.enabled=true
+spring.devtools.livereload.enable = true 
 spring.devtools.restart.enabled=true
