--- a/d_boot_toy/src/main/resources/application.properties
+++ b/d_boot_toy/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9090
 
-#encoding filter
+#encoding
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
@@ -8,7 +8,6 @@ server.servlet.encoding.enabled=true
 #logging
 logging.level.root=info
 logging.level.org.hibernate.SQL=debug
-
 
 #devtools
 spring.devtools.livereload.enabled=true
@@ -18,7 +17,7 @@ spring.devtools.restart.enabled=true
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.password=1234
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=boot
+spring.datasource.username=boottoy
 
 #JPA
 spring.jpa.show-sql=true
@@ -33,4 +32,18 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.dbug=true
+spring.mail.properties.mail.debug=true
+
+
+
+
+
+
+
+
+
+
+
+
+
+
