--- a/d_boot_toy/src/main/resources/application.properties
+++ b/d_boot_toy/src/main/resources/application.properties
@@ -20,13 +20,11 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=boottoy
 
 #JPA
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.format_sql=true
 
 #MAIL
 spring.mail.host=smtp.gmail.com
-spring.mail.password=1234
+spring.mail.password=
 spring.mail.username=alssgo70051@gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
