--- a/d_boot_toy/src/main/resources/application.properties
+++ b/d_boot_toy/src/main/resources/application.properties
@@ -7,7 +7,6 @@ server.servlet.encoding.enabled=true
 
 #logging
 logging.level.root=info
-logging.level.org.hibernate.SQL=debug
 
 #devtools
 spring.devtools.livereload.enabled=true
@@ -21,11 +20,13 @@ spring.datasource.username=boottoy
 
 #JPA
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
 
 #MAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.password=
-spring.mail.username=alssgo70051@gmail.com
+spring.mail.username=
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
