--- a/d_boot_toy/src/main/resources/application.properties
+++ b/d_boot_toy/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9090
 
-#encoding
+#인코딩 필터
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
@@ -26,7 +26,7 @@ spring.jpa.show-sql=true
 #MAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.password=
-spring.mail.username=
+spring.mail.username=alssgo70051@gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
