--- a/e_boot_security/src/main/resources/application.properties
+++ b/e_boot_security/src/main/resources/application.properties
@@ -7,6 +7,8 @@ server.servlet.encoding.enabled=true
 
 #logging
 logging.level.root=info
+logging.level.org.hibernate.SQL=info
+logging.level.org.hibernate.type.descriptor.sql=info
 
 #devtools
 spring.devtools.livereload.enabled=true
@@ -21,7 +23,7 @@ spring.datasource.username=boottoy
 #JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 #MAIL
 spring.mail.host=smtp.gmail.com
@@ -33,9 +35,9 @@ spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.debug=true
 
-
-
-
+#Spring Security ClientRegistration Class
+spring.security.oauth2.client.registration.google.client-id:310948238120-8kg2f5puceislpgki3vp6ahobb8e0qr7.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret: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
 
 
 
